# Proj_Mythos

./: .env.example  .gitignore  Anchor.toml  DEMO_SCRIPT.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  requirements.txt  vercel-backend.json
agents/: solana_borrower_agent.py  solana_lender_agent.py
api/: index.py
backend/api/: attestation.py  helius_client.py  requirements.txt  server.py  solana_client.py  x402_middleware.py
backend/oracles/: pyth_oracle.py
docs/: DEPLOYMENT.md
docs/archive/backend-zk/: proof_generator.py
frontend/Dashboard/: package-lock.json  tsconfig.app.tsbuildinfo
frontend/Dashboard/src/: App.tsx
frontend/Dashboard/src/components/: AgentNegotiationFeed.tsx  X402PaymentVisualizer.tsx
frontend/Dashboard/src/components/dashboard/: AgentTerminal.tsx  AssetTable.tsx  LoanConfigurationForm.tsx  StablecoinSelector.tsx  TransactionModal.tsx  WalletConnection.tsx  WalletConnectionWizard.tsx
frontend/Dashboard/src/components/wallet/: SolanaWalletProvider.tsx
frontend/Dashboard/src/data/: mockData.ts
frontend/Dashboard/src/hooks/: useWallet.ts  useWebSocket.ts
frontend/Dashboard/src/lib/: solana.ts  stablecoinLogos.tsx  validation.ts
frontend/Dashboard/src/pages/: DashboardLayout.tsx  Loans.tsx  LoginGate.tsx  Markets.tsx  MythosPage.tsx  Portfolio.tsx  Settings.tsx  Transactions.tsx
programs/mythos/: Cargo.toml
programs/mythos/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
