[package]
name = "mythos"
version = "0.1.0"
description = "Native Solana Program for Mythos protocol"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
borsh = "1.3.1"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
